# webScorin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  debug_worker.py  docker-compose.yml  pyproject.toml  test_scan.py
Example/187betslot.com/: index.html  local_time.html  md5_hash.txt  render.json  whois.html
Example/187betslot.com/srcs/assets/time/: pubfig.min.js.download  t2024-09-03b.js  t2024-10-23.css
Example/187betslot.com/srcs/assets/whois_files/: bootstrap_pairnic.css  pairnic.css  styles.css
Example/187betslot.com/srcs/components/: banner.html  footer.html
Example/187betslot.com/srcs/css/: body.css  report.css
app/: __init__.py  api.py  crawler.py  models.py  tasks.py
